--- a/cloudformation/proxy.yml
+++ b/cloudformation/proxy.yml
@@ -24,6 +24,10 @@ Parameters:
     Type: String
     Description: security group to use
 
+  Listener:
+    Type: String
+    Description: ALB Listener
+
   # S3ConfigPath:
   #   Type: String
 
