--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -2,6 +2,6 @@ FROM nginx:alpine
 
 RUN apk add -u --update py-pip && pip install awscli
 
-ADD ./default.conf /etc/nginx/conf.d/default.conf
+ADD ./nginx.conf /etc/nginx/nginx.conf
 ADD ./entrypoint.sh /entrypoint.sh
 CMD ["/entrypoint.sh"]
