--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -12,13 +12,7 @@ http {
   server {
     listen 80;
 
-# strip /eth
-#    location = /eth {
-#      return 302 /eth/;
-#    }
-
-    # NGINX will reject anything not matching /
-    location / {
+    location /eth/ {
       # Reject requests with unsupported HTTP method
       if ($request_method !~ ^(GET|POST|HEAD|OPTIONS)$) {
         return 405;
@@ -26,7 +20,7 @@ http {
 
       # Only requests matching the whitelist expectations will
       # get sent to the application server
-      proxy_pass http://eth-indexer:3000;
+      proxy_pass http://eth-indexer:3000/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
