--- a/cloudformation/vpc.yml
+++ b/cloudformation/vpc.yml
@@ -28,6 +28,16 @@ Parameters:
     Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
     Type: String
 
+  EnableSSHAccess:
+    Type: String
+    Default: "false"
+    AllowedValues:
+      - "true"
+      - "false"
+
+Conditions:
+  SSHAccess: !Equals [!Ref EnableSSHAccess, "true"]
+
 Resources:
 
   # purpose: block out a bunch of addresses
@@ -228,6 +238,43 @@ Resources:
     DependsOn: InternetGatewayAttachment
     Properties:
       Domain: vpc
+
+  # NetworkAcl:
+  #   Type : AWS::EC2::NetworkAcl
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     Tags:
+  #       - Key: Application
+  #         Value: !Ref AWS::StackId
+
+  # SSHAclRule:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Condition: SSHAccess
+  #   Properties:
+  #     NetworkAclId:
+  #       Ref: NetworkAcl
+  #     RuleNumber: '100'
+  #     Protocol: 6
+  #     RuleAction: allow
+  #     Egress: 'false'
+  #     CidrBlock: 0.0.0.0/0
+  #     PortRange:
+  #       From: '22'
+  #       To: '22'
+
+  # APIAclRule:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     NetworkAclId:
+  #       Ref: NetworkAcl
+  #     RuleNumber: '110'
+  #     Protocol: 6
+  #     RuleAction: allow
+  #     Egress: 'false'
+  #     CidrBlock: 0.0.0.0/0
+  #     PortRange:
+  #       From: '80'
+  #       To: '80'
 
 Outputs:
 
