--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,19 +1,37 @@
 version: '2'
 services:
-  ethereum-parity:
-    image: "210041114155.dkr.ecr.us-east-1.amazonaws.com/mainnet-parity:latest"
-    restart: always
-    working_dir: /parity/
-    # see parity-settings.png
-    # command: "--chain ${CHAIN} --jsonrpc-interface all --ws-interface all --ws-origins all --no-warp"
-    volumes:
-      - "$HOME/.parity/share/io.parity.ethereum/docker/${CHAIN}/:/root/.local/share/io.parity.ethereum/"
+  # parity:
+  #   # image: "parity/parity:stable"
+  #   image: '404247308186.dkr.ecr.us-east-1.amazonaws.com/parity:latest'
+  #   restart: always
+  #   container_name: "parity-${CHAIN}"
+  #   working_dir: /parity/
+  #   # see parity-settings.png
+  #   # command: "--chain ${CHAIN} --jsonrpc-interface all --ws-interface all --ws-origins all --no-warp"
+  #   volumes:
+  #     - "$HOME/.parity/share/io.parity.ethereum/docker/${CHAIN}:/root/.local/share/io.parity.ethereum/"
+  #   ports:
+  #     # - 8180:8180
+  #     - 8545:8545
+  #     - 8546:8546
+  #     - 30303:30303
+  #     - 30303:30303/udp
+  #   environment:
+  #     NETWORK_NAME: "${CHAIN}"
+
+  nginx:
+    # image: '404247308186.dkr.ecr.us-east-1.amazonaws.com/nginx-proxy:latest'
+    build: './nginx'
     ports:
-      # - 8180:8180
-      - 8545:8545
-      - 8546:8546
-      - 30303:30303
-      # - 30303:30303/udp
+      - 9876:80
+
+  eth-indexer:
+    image: '404247308186.dkr.ecr.us-east-1.amazonaws.com/eth-indexer:latest'
     environment:
-      EXIT_AFTER_SYNC: "1"
-      TARGET_BLOCK: "0"
+      NODE_NETWORK: ropsten
+      NODE_HOST: parity
+      NODE_PORT: 3000
+      NODE_USE_WS: 'false'
+      START_BLOCK: 3000000
+      CONFIRMATION_HEIGHT: 15
+      DEBUG: tradle:*
